create a message queue
Signed-off-by: Mattias Andrée <maandree@operamail.com>

--- a/TODO
+++ b/TODO
@@ -1,1 +1,2 @@
 Unprivileged users should be able to manage their own daemons.
+Create a /run file with an exlusive flock on it to mark that daemond is running.
