--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-I though about calling this program "angel" (the
+I thought about calling this program "angel" (the
 opposite of demon,) but I don't know I'm quite
 fund of "daemond".
 
