--- a/README
+++ b/README
@@ -3,5 +3,5 @@ opposite of demon,) but I don't know I'm quite
 fund of "daemond".
 
 Anyway, this a daemon that manages daemons,
-(including itself),
+(including itself).
 
